--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.6",
     "core-js": "^2.5.7",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-mongo-sanitize": "^2.2.0",
@@ -62,6 +63,6 @@
     "prettier": "^3.1.1"
   },
   "engines": {
-    "node": ">=10.0.0"
+    "node": "^10"
   }
 }
